--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libsamplerate-0.1.8.tar.gz": e5fe82c4786be2fa33ca6bd4897db4868347fe70
+  libsamplerate-0.1.9.tar.gz: ed60f957a4ff87aa15cbb1f3dbd886fa7e5e9566
