--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libsamplerate-0.1.9.tar.gz: ed60f957a4ff87aa15cbb1f3dbd886fa7e5e9566
+  libsamplerate-0.2.2.tar.xz: 93eacb671d2d09e317f5ccd49967cf747cb4d937
